--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
+  justify-content: center;
+  font-family: "Dosis", sans-serif;
 }
 
 .container-main {
   width: 100%;
-  max-width: 1800px;
   margin: 0px auto;
+  overflow: hidden;
 }
 
 header {
@@ -17,34 +20,57 @@ header {
   background-size: cover;
   background-position: 30%;
   height: 100vh;
-  position: relative;
+  /* CSS */
 }
 header h1 {
   color: #fff;
   position: absolute;
+  margin-top: 60px;
+  margin-left: 23px;
   font-size: 2rem;
 }
+header h1 .normal {
+  font-size: 2rem;
+  font-weight: 200;
+  font-style: oblique;
+}
+header h1 .bigger {
+  font-size: 3rem;
+  font-weight: 400;
+}
+header h1 .smaller {
+  font-size: 1.2rem;
+  font-weight: 200;
+  font-style: italic;
+}
+header h1 .medium {
+  font-size: 2.4rem;
+  font-weight: 300;
+}
 header .primary-navigation {
-  background-color: rgba(218, 194, 194, 0.171);
-  height: 10vh;
+  background-color: rgba(218, 194, 194, 0.32);
+  height: 13vh;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   overflow: hidden;
+  align-items: center;
 }
-header .primary-navigation a {
-  font-size: 16px;
-  color: white;
-  padding: 14px;
-  text-decoration: none;
+header .primary-navigation .logo {
+  margin-left: 18px;
+  width: 110px;
 }
 header .primary-navigation .dropdown {
   overflow: hidden;
   border: 1px solid #fff;
   border-radius: 15px;
   width: 100px;
+  height: 50px;
+  justify-content: center;
+  margin-right: 10px;
   text-align: center;
+  cursor: pointer;
 }
 header .primary-navigation .dropdown .dropbtn {
   font-size: 16px;
@@ -60,16 +86,21 @@ header .primary-navigation .dropdown .dropbtn {
 header .primary-navigation .dropdown .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #dcd5d5;
+  top: 66px;
+  right: 10px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  color: #fff;
-  width: 200px;
+  color: #000000;
+  width: 300px;
+  z-index: 1;
 }
 header .primary-navigation .dropdown .dropdown-content a {
+  text-align: center;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
+  color: #060606;
+  background-color: #fff;
 }
 header .primary-navigation .dropdown .dropdown-content a:hover {
   background-color: rgba(135, 215, 201, 0.2666666667);
@@ -78,73 +109,73 @@ header .primary-navigation .dropdown:hover .dropdown-content {
   display: block;
   background-color: rgba(237, 232, 232, 0.183);
 }
-header .CTA {
-  position: absolute;
-  left: 20px;
-  bottom: 80px;
-  height: 30px;
+header .button-1 {
+  background-color: rgba(141, 77, 196, 0.3882352941);
+  border-radius: 8px;
+  border-style: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
   width: 150px;
+  line-height: 20px;
+  outline: none;
+  padding: 10px 16px;
+  margin-top: 350px;
+  margin-left: 25px;
+  text-align: center;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border: 1px solid #fff;
+}
+header .button-1:hover {
+  background-color: rgb(162, 0, 255);
 }
 
-.container-main {
-  /* Style inputs with type="text", select elements and textareas */
-  /* Style the submit button with a specific background color etc */
-  /* When moving the mouse over the submit button, add a darker green color */
-  /* Add a background color and some padding around the form */
-}
-.container-main h2 {
-  text-align: center;
-  padding: 50px;
-}
 .container-main .service-wrapper {
+  margin-top: 20px;
   width: 100%;
-  height: 100vh;
+  gap: 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
-  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
 }
 .container-main .service-wrapper .service-items {
   width: 40%;
-  max-width: 200px;
-  height: 100px;
-  background-color: rgba(66, 168, 168, 0.338);
+  height: 150px;
+  border-radius: 10px;
+  background-color: rgba(186, 134, 232, 0.142);
   margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-.container-main .kontakt-wrapper {
-  background-color: gray;
+.container-main .service-wrapper .service-items:hover {
+  background-color: rgba(245, 219, 115, 0.395);
 }
-.container-main .kontakt-wrapper .kontakt-text {
-  margin-right: 200px;
-  border: 1px solid black;
+.container-main .service-wrapper .service-items .service-text {
+  text-align: center;
 }
-.container-main input[type=text], .container-main select, .container-main textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical;
-}
-.container-main input[type=submit] {
-  background-color: #04AA6D;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.container-main input[type=submit]:hover {
-  background-color: #45a049;
-}
-.container-main .container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+.container-main .service-wrapper .service-items img {
+  height: 60%;
 }
 
-footer {
+.footer-wrapper {
   background-color: darkgray;
+  margin-top: 20px;
+}
+.footer-wrapper .undersidan-footer ul {
+  list-style: none;
+}
+.footer-wrapper .undersidan-footer ul li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.footer-wrapper .undersidan-footer ul a {
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
