--- a/style.scss
+++ b/style.scss
@@ -2,56 +2,97 @@
 
 
 
+  @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 16px;
+    justify-content: center;
+
+    font-family: 'Dosis', sans-serif;
 }
 
 
 .container-main{
     width: 100%;
-    max-width: 1800px;
+    
     margin: 0px auto;
+    overflow: hidden;
    
 }
 header{
     background-image:url(./images/pexels-jakub-zerdzicki-18538670.jpg) ;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 30%;
+    background-size:cover;
+    background-position:30%;
     height:100vh;
-    position: relative;
+    
+    
+    
     h1{
-        color: #fff;
-        position: absolute;
+      color: #fff;
+      position: absolute;
+      margin-top:60px;
+      margin-left: 23px;
         font-size:2rem;
+        
+
+        .normal{
+            font-size: 2rem;
+            font-weight: 200;
+            font-style: oblique;
+        }
+        
+        .bigger{
+            font-size: 3rem;
+            font-weight: 400;
+            
+            
+           
+        }
+        .smaller{
+            font-size:1.2rem;
+            font-weight: 200;
+            font-style: italic;
+           
+        }
+        .medium{
+          font-size:2.4rem;
+            font-weight: 300;
+        }
         
     }
 
     .primary-navigation{
-        background-color: rgba(218, 194, 194, 0.171);  
-        height:10vh;
+        background-color: rgba(218, 194, 194, 0.32);  
+        height:13vh;
         width:100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         overflow: hidden;
-        
-        a{
-            font-size: 16px;
-            color: white;
-            padding: 14px ;
-            text-decoration: none;
-        }
+        align-items: center;
 
+        .logo{
+          margin-left: 18px;
+          width:110px;
+          
+
+        }
+        
+        
         .dropdown {
             overflow: hidden;
             border: 1px solid #fff;
             border-radius: 15px;
             width:100px;
+            height:50px;
+            justify-content: center;
+            margin-right: 10px;
             text-align: center;
+            cursor: pointer;
 
             .dropbtn {
                 font-size: 16px;
@@ -68,16 +109,24 @@ header{
               .dropdown-content {
                 display: none;
                 position: absolute;
-                background-color: #dcd5d5;
+                top:66px;
+                right: 10px;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                color: #fff;
-                width:200px;
-               
+                color: #000000;
+                width:300px;
+                z-index: 1;
+                
+                
+          
                 a {
+                  text-align: center;
                     padding: 12px 16px;
                     text-decoration: none;
                     display: block;
                     text-align: left;
+                    color: #060606;
+                    background-color:#fff;
+                    
                   }
 
                   a:hover {
@@ -91,91 +140,118 @@ header{
     background-color: rgba(237, 232, 232, 0.183);
     }
   } 
+ 
 
-  .CTA{
-    position: absolute;
-    left:20px;
-    bottom: 80px;
-    height:30px;
-    width: 150px;
-  }
+/* CSS */
+.button-1 {
+  background-color: #8d4dc463;
+  border-radius: 8px;
+  border-style: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  width: 150px;
+  line-height: 20px;
+  outline: none;
+  padding: 10px 16px;
+  margin-top: 350px;
+  margin-left: 25px;
+  text-align: center;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border: 1px solid #fff;
+  
+
+}
+.button-1:hover{
+  background-color: rgb(162, 0, 255);
+}
+
+
+
+ 
+  
 }
 
 .container-main{
 
-    h2{
-        text-align: center;
-        padding: 50px;
-    }
+    
 
     .service-wrapper{
 
-       
+       margin-top: 20px;
         width: 100%;
-        height: 100vh;
+        gap:20px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-around;
-        flex-wrap: wrap;
+        align-content: center;
+        align-items: center;
+       
         
         .service-items{
             width:40%;
-            max-width: 200px;
-            height: 100px;
-            background-color: rgba(66, 168, 168, 0.338);
+            height: 150px;
+            border-radius: 10px;
+            background-color: rgba(186, 134, 232, 0.142);
             margin: 0 20px;
-        }
-        }
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+           
+            &:hover {
+              background-color:rgba(245, 219, 115, 0.395);
+          }
+          
 
-        .kontakt-wrapper{
+            .service-text{
+              text-align: center;
+              
 
-            background-color: gray;
-            .kontakt-text{
-                margin-right: 200px;
-               
-                border: 1px solid black;
-                
+             
+            }
+            img{
+              height:60%;
+
             }
         }
+        }
 
-        /* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  }
-  
-  /* Style the submit button with a specific background color etc */
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  /* Add a background color and some padding around the form */
-  .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
+        
+        }
 
-}
+        
 
-footer{
+.footer-wrapper{
     background-color: darkgray;
+    margin-top: 20px;
+    
+    .undersidan-footer{
+     
+      
+
+      ul{
+        list-style: none;
+       
+        li{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-around;
+        }
+
+        a{
+          text-decoration: none;
+
+        }
+        
+        
+      }
+      
+    }
+
 }
 
 
