--- a/style.scss
+++ b/style.scss
@@ -223,14 +223,41 @@ header{
         
         }
 
-        
+footer{
+  background-color: darkgray;
+  margin-top: 20px;
+  height:23vh;
+
 
 .footer-wrapper{
-    background-color: darkgray;
-    margin-top: 20px;
+    
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-around;
+    margin: auto;
+    gap: 10px;
+    position: relative;
+
+
+    .logo-footer{
+      
+      img{
+        width:40%;
+        position: absolute;
+        left:10px;
+        bottom: 35px;
+       
+       
+      }
+    }
     
     .undersidan-footer{
-     
+     display: flex;
+     flex-direction: row;
+      justify-content: flex-start;
+      margin-top: 20px;
+      
       
 
       ul{
@@ -238,12 +265,17 @@ header{
        
         li{
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
           justify-content: space-around;
+          
         }
 
         a{
           text-decoration: none;
+          font-family: inherit;
+          color: #060606;
+          font-size: 1rem;
+          font-weight: 500px;
 
         }
         
@@ -251,7 +283,17 @@ header{
       }
       
     }
+   
 
+}
+.text-footer{
+  margin-top: 100px;
+  text-align: center;
+  margin: auto;
+  color: red;
+  margin-top: 20px;
+  
+}
 }
 
 
