--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
   justify-content: center;
-  font-family: "Dosis", sans-serif;
+  font-family: "Barlow", sans-serif;
 }
 
 .container-main {
@@ -133,6 +133,39 @@ header .button-1:hover {
   background-color: rgb(162, 0, 255);
 }
 
+.container-main .om-oss-title p {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.container-main .om-oss-wrapper {
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+.container-main .om-oss-wrapper .om-oss-img img {
+  width: 90%;
+  border-radius: 200px;
+}
+.container-main .om-oss-wrapper .om-oss-text {
+  width: 80%;
+  min-width: 50%;
+}
+.container-main .om-oss-wrapper .om-oss-text p {
+  font-size: 1rem;
+}
+.container-main .service-title p {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
 .container-main .service-wrapper {
   margin-top: 20px;
   width: 100%;
