--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
 
 *{
     margin: 0;
@@ -177,13 +178,27 @@ header{
 }
 
 .container-main{
+  margin-top: 30px;
  
   .om-oss-title{
+   background-color: rgba(0, 255, 255, 0.203);
+   width: 70%;
+   border-radius: 20px;
+   position: relative;
+   left: 200px;
+   height:50px;
+   margin-bottom: 20px;
+   
     p{
-      text-align: center;
-      margin-top: 50px;
+    
+      text-align: left;
+      padding-left: 25px;
+      padding-top: 9px;
       font-size: 1.5rem;
-      font-weight: 500;
+      font-weight: 300;
+      font-family: 'Roboto', sans-serif;
+      
+  
     }
     
   }
@@ -221,11 +236,21 @@ header{
   }
 
   .service-title{
+   background-color: rgba(198, 122, 249, 0.203);
+   width: 70%;
+   border-radius: 20px;
+   position: relative;
+   right: 100px;
+   height:50px;
+   margin-bottom: 20px;
+   font-family: 'Roboto', sans-serif;
     p{
-      text-align: center;
-      
+      text-align: right;
+      padding-right: 25px;
+      padding-top: 9px;
       font-size: 1.5rem;
-      font-weight: 500;
+      font-weight: 300;
+      font-family: 'Roboto', sans-serif;
     }
   }
   
@@ -248,7 +273,7 @@ header{
             width:40%;
             height: 150px;
             border-radius: 10px;
-            background-color: rgba(186, 134, 232, 0.142);
+            background-color: rgba(194, 194, 194, 0.142);
             margin: 0 20px;
             display: flex;
             flex-direction: column;
@@ -279,37 +304,40 @@ header{
 footer{
   background-color: darkgray;
   margin-top: 20px;
-  height:23vh;
+  height:40vh;
 
 
 .footer-wrapper{
+  
     
     display: flex;
-    flex-direction: row;
-    width: 80%;
+    flex-direction: column;
+    width: 100%;
     justify-content: space-around;
     margin: auto;
-    gap: 10px;
-    position: relative;
+    padding:10px;
+    padding-left: 40px;
+    
 
 
     .logo-footer{
       
+      
       img{
-        width:40%;
-        position: absolute;
-        left:10px;
-        bottom: 35px;
+      
+        max-width: 100px;
+        
+        
+        
        
        
       }
     }
     
     .undersidan-footer{
-     display: flex;
-     flex-direction: row;
-      justify-content: flex-start;
-      margin-top: 20px;
+     
+      margin-top: 5px;
+      
       
       
 
@@ -320,15 +348,17 @@ footer{
           display: flex;
           flex-direction: column;
           justify-content: space-around;
+          gap: 6px;
           
         }
 
         a{
           text-decoration: none;
           font-family: inherit;
-          color: #060606;
-          font-size: 1rem;
-          font-weight: 500px;
+          color: #000000;
+          font-size: 0.9rem;
+          
+          font-family: 'Roboto', sans-serif;
 
         }
         
@@ -343,8 +373,9 @@ footer{
   margin-top: 100px;
   text-align: center;
   margin: auto;
-  color: red;
-  margin-top: 20px;
+  
+  margin-top: 10px;
+  font-family: 'Roboto', sans-serif;
   
 }
 }
