--- a/style.scss
+++ b/style.scss
@@ -16,13 +16,11 @@
     font-family: 'Barlow', sans-serif;
 }
 
-.container-main{
+.container{
     width: 100%;
     margin: 0px auto;
     overflow: hidden;
-    margin-top: 0;
-    padding-top: 0;
-    box-sizing: border-box;
+   
    
 }
 header{
