--- a/style.css
+++ b/style.css
@@ -76,22 +76,21 @@ header .primary-navigation .dropdown {
 header .primary-navigation .dropdown .dropbtn {
   font-size: 16px;
   border: none;
-  outline: none;
   color: white;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
   position: relative;
+  display: inline-block;
 }
 header .primary-navigation .dropdown .dropdown-content {
   display: none;
   position: absolute;
-  top: 66px;
-  right: 10px;
+  width: 500px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  color: #000000;
-  width: 300px;
+  color: #cb1111;
+  width: 100vh;
   z-index: 1;
 }
 header .primary-navigation .dropdown .dropdown-content a {
@@ -100,8 +99,9 @@ header .primary-navigation .dropdown .dropdown-content a {
   text-decoration: none;
   display: block;
   text-align: left;
-  color: #060606;
+  color: #295dab;
   background-color: #fff;
+  width: 500px;
 }
 header .primary-navigation .dropdown .dropdown-content a:hover {
   background-color: rgba(135, 215, 201, 0.2666666667);
