--- a/style.css
+++ b/style.css
@@ -9,13 +9,10 @@
   font-family: "Barlow", sans-serif;
 }
 
-.container {
+.header {
   width: 100%;
   margin: 0px auto;
   overflow: hidden;
-}
-
-header {
   background-image: url(./images/pexels-jakub-zerdzicki-18538670.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -23,94 +20,85 @@ header {
   height: 100vh;
   /* CSS */
 }
-header h1 {
+.header .nav {
+  border: 1px solid gray;
+}
+.header .nav__toggle {
+  position: absolute;
+  cursor: pointer;
+  margin: 0rem 1rem;
+  right: 0;
+}
+.header .nav__toggle img {
+  width: 1.5rem;
+}
+.header .nav__toggle .close {
+  display: none;
+}
+.header .nav__toggle .menu {
+  margin-top: 0.2rem;
+}
+.header .nav__checkbox {
+  display: none;
+}
+.header .nav__menu {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  margin: 1rem;
+}
+.header .nav__menu li {
+  list-style: none;
+  display: none;
+}
+.header .nav__menu li:first-child {
+  margin-right: auto;
+  display: block;
+}
+.header .nav__menu a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.2rem;
+}
+.header .nav__menu img {
+  width: 5rem;
+}
+.header #nav__checkbox:checked ~ ul.nav__menu li {
+  display: block;
+}
+.header #nav__checkbox:checked ~ label.nav__toggle .close {
+  display: block;
+}
+.header #nav__checkbox:checked ~ label.nav__toggle .menu {
+  display: none;
+}
+.header h1 {
   color: #fff;
   position: absolute;
   margin-top: 60px;
   margin-left: 23px;
   font-size: 2rem;
 }
-header h1 .normal {
+.header h1 .normal {
   font-size: 2rem;
   font-weight: 200;
   font-style: oblique;
 }
-header h1 .bigger {
+.header h1 .bigger {
   font-size: 3rem;
   font-weight: 400;
 }
-header h1 .smaller {
+.header h1 .smaller {
   font-size: 1.2rem;
   font-weight: 200;
   font-style: italic;
 }
-header h1 .medium {
+.header h1 .medium {
   font-size: 2.4rem;
   font-weight: 300;
 }
-header .primary-navigation {
-  background-color: rgba(218, 194, 194, 0.32);
-  height: 13vh;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  overflow: hidden;
-  align-items: center;
-}
-header .primary-navigation .logo {
-  margin-left: 18px;
-  width: 110px;
-}
-header .primary-navigation .dropdown {
-  overflow: hidden;
-  border: 1px solid #fff;
-  border-radius: 15px;
-  width: 100px;
-  height: 50px;
-  justify-content: center;
-  margin-right: 10px;
-  text-align: center;
-  cursor: pointer;
-}
-header .primary-navigation .dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-  position: relative;
-  display: inline-block;
-}
-header .primary-navigation .dropdown .dropdown-content {
-  display: none;
-  position: absolute;
-  width: 500px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  color: #cb1111;
-  width: 100vh;
-  z-index: 1;
-}
-header .primary-navigation .dropdown .dropdown-content a {
-  text-align: center;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-  color: #295dab;
-  background-color: #fff;
-  width: 500px;
-}
-header .primary-navigation .dropdown .dropdown-content a:hover {
-  background-color: rgba(135, 215, 201, 0.2666666667);
-}
-header .primary-navigation .dropdown:hover .dropdown-content {
-  display: block;
-  background-color: rgba(237, 232, 232, 0.183);
-}
-header .button-1 {
+.header .button-1 {
   background-color: rgba(141, 77, 196, 0.3882352941);
   border-radius: 8px;
   border-style: none;
@@ -130,7 +118,7 @@ header .button-1 {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border: 1px solid #fff;
 }
-header .button-1:hover {
+.header .button-1:hover {
   background-color: rgb(162, 0, 255);
 }
 
@@ -267,4 +255,23 @@ footer .text-footer {
   margin: auto;
   margin-top: 10px;
   font-family: "Roboto", sans-serif;
+}
+
+@media only screen and (min-width: 560px) {
+  .nav {
+    background-color: red;
+  }
+  .nav__toggle {
+    display: none;
+  }
+  .nav__menu {
+    flex-direction: column;
+  }
+  .nav__menu .nav__menu {
+    background-color: blue;
+    display: block;
+  }
+  .nav__menu .nav__menu li a {
+    display: block;
+  }
 }/*# sourceMappingURL=style.css.map */
