--- a/style.scss
+++ b/style.scss
@@ -16,19 +16,79 @@
     font-family: 'Barlow', sans-serif;
 }
 
-.container{
-    width: 100%;
-    margin: 0px auto;
-    overflow: hidden;
-   
-   
-}
-header{
-    background-image:url(./images/pexels-jakub-zerdzicki-18538670.jpg) ;
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position:30%;
-    height:100vh;
+
+
+.header{
+   width: 100%;
+   margin: 0px auto;
+   overflow: hidden;
+   background-image:url(./images/pexels-jakub-zerdzicki-18538670.jpg) ;
+   background-repeat: no-repeat;
+   background-size:cover;
+   background-position:30%;
+  height:100vh;
+
+  .nav{
+   border: 1px solid gray;
+   &__toggle{
+    position: absolute;
+    cursor: pointer;
+    margin:0rem 1rem ;
+    right: 0;
+    img{
+      width: 1.5rem;
+    }
+    .close{
+      display: none;
+    }
+    .menu{
+      margin-top: 0.2rem;
+    }
+    
+   }
+   &__checkbox{
+    display: none;
+  }
+  &__menu{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    margin: 1rem;
+
+    li{
+      list-style: none;
+      display: none;
+
+      &:first-child{
+        margin-right: auto;
+        display: block;
+      }
+    }
+    a{
+      text-decoration: none;
+      color: inherit;
+      font-size: 1.2rem;
+    }
+    img{
+      width: 5rem;
+      
+    }
+  }
+  }
+
+  #nav__checkbox:checked ~ ul.nav__menu li{
+
+    display: block;
+  }
+  #nav__checkbox:checked ~ label.nav__toggle .close{
+    display: block;
+  }
+  #nav__checkbox:checked ~ label.nav__toggle  .menu{
+    display: none;
+  }
+ 
+    
   
   
     h1{
@@ -61,79 +121,7 @@ header{
         
     }
 
-    .primary-navigation{
-        background-color: rgba(218, 194, 194, 0.32);  
-        height:13vh;
-        width:100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        overflow: hidden;
-        align-items: center;
-      
-        .logo{
-          margin-left: 18px;
-          width:110px;
-        }
-        
-        
-        .dropdown {
-            overflow: hidden;
-            border: 1px solid #fff;
-            border-radius: 15px;
-            width:100px;
-            height:50px;
-            justify-content: center;
-            margin-right: 10px;
-            text-align: center;
-            cursor: pointer;
-
-            .dropbtn {
-                font-size: 16px;
-                border: none;
-                color: white;
-                padding: 14px 16px;
-                background-color: inherit;
-                font-family: inherit; 
-                margin: 0;
-                position: relative;
-                display: inline-block;
-              }
-
-              .dropdown-content {
-                display: none;
-                position: absolute;
-                width: 500px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                color: #cb1111;
-                width:100vh;
-                z-index: 1;
-                
-          
-                a {
-                  text-align: center;
-                    padding: 12px 16px;
-                    text-decoration: none;
-                    display: block;
-                    text-align: left;
-                    color: #295dab;
-                    background-color:#fff;
-                    width:500px;
-                    &:hover {
-                      background-color: #87d7c944;
-                    }
-                  }
-
-                  
-          }
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-    background-color: rgba(237, 232, 232, 0.183);
-    }
-  } 
- 
+    
 
 /* CSS */
 .button-1 {
@@ -371,6 +359,35 @@ footer{
 }
 }
 
+
+@media only screen and (min-width:560px){
+  .nav{
+   background-color: red;
+    &__toggle{
+      display: none;
+    }
+    &__menu{
+      flex-direction: column;
+      
+
+      .nav__menu{
+        background-color: blue;
+        display: block;
+
+        li a{
+          display: block;
+          
+          
+  
+  
+          
+        }
+      }
+
+      
+    }
+  }
+}
 
 
 
