--- a/style.css
+++ b/style.css
@@ -5,13 +5,18 @@
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
-  justify-content: center;
+}
+
+body {
   font-family: "Barlow", sans-serif;
 }
 
-.header {
+.container {
   width: 100%;
   margin: 0px auto;
+  overflow: hidden;
+}
+.container .header {
   overflow: hidden;
   background-image: url(./images/pexels-jakub-zerdzicki-18538670.jpg);
   background-repeat: no-repeat;
@@ -20,86 +25,68 @@
   height: 100vh;
   /* CSS */
 }
-.header .nav {
-  border: 1px solid gray;
-}
-.header .nav__toggle {
-  position: absolute;
-  cursor: pointer;
-  margin: 0rem 1rem;
-  right: 0;
-}
-.header .nav__toggle img {
-  width: 1.5rem;
-}
-.header .nav__toggle .close {
-  display: none;
-}
-.header .nav__toggle .menu {
-  margin-top: 0.2rem;
-}
-.header .nav__checkbox {
-  display: none;
-}
-.header .nav__menu {
+.container .header .header-nav {
+  background-color: rgba(211, 211, 211, 0.288);
   display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  align-items: center;
-  margin: 1rem;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 70px;
 }
-.header .nav__menu li {
+.container .header .header-nav .logo {
+  margin: auto;
+}
+.container .header .header-nav .logo img {
+  width: 90px;
+}
+.container .header .header-nav .nav-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  margin: auto;
   list-style: none;
-  display: none;
+  gap: 15px;
 }
-.header .nav__menu li:first-child {
-  margin-right: auto;
-  display: block;
+.container .header .header-nav .nav-menu li {
+  width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 10px;
 }
-.header .nav__menu a {
+.container .header .header-nav .nav-menu li:hover {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+.container .header .header-nav .nav-menu li a {
+  color: #fff;
   text-decoration: none;
-  color: inherit;
-  font-size: 1.2rem;
 }
-.header .nav__menu img {
-  width: 5rem;
-}
-.header #nav__checkbox:checked ~ ul.nav__menu li {
-  display: block;
-}
-.header #nav__checkbox:checked ~ label.nav__toggle .close {
-  display: block;
-}
-.header #nav__checkbox:checked ~ label.nav__toggle .menu {
-  display: none;
-}
-.header h1 {
+.container .header h1 {
   color: #fff;
   position: absolute;
   margin-top: 60px;
   margin-left: 23px;
   font-size: 2rem;
 }
-.header h1 .normal {
+.container .header h1 .normal {
   font-size: 2rem;
   font-weight: 200;
   font-style: oblique;
 }
-.header h1 .bigger {
+.container .header h1 .bigger {
   font-size: 3rem;
   font-weight: 400;
 }
-.header h1 .smaller {
+.container .header h1 .smaller {
   font-size: 1.2rem;
   font-weight: 200;
   font-style: italic;
 }
-.header h1 .medium {
+.container .header h1 .medium {
   font-size: 2.4rem;
   font-weight: 300;
 }
-.header .button-1 {
-  background-color: rgba(141, 77, 196, 0.3882352941);
+.container .header .button-1 {
+  background-color: rgba(141, 77, 196, 0.6784313725);
   border-radius: 8px;
   border-style: none;
   color: #FFFFFF;
@@ -118,14 +105,14 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border: 1px solid #fff;
 }
-.header .button-1:hover {
-  background-color: rgb(162, 0, 255);
+.container .header .button-1:hover {
+  background-color: rgba(162, 0, 255, 0.484);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
 }
-
-.container-main {
+.container .container-main {
   margin-top: 30px;
 }
-.container-main .om-oss-title {
+.container .container-main .om-oss-title {
   background-color: rgba(0, 255, 255, 0.203);
   width: 70%;
   border-radius: 20px;
@@ -134,7 +121,7 @@
   height: 50px;
   margin-bottom: 20px;
 }
-.container-main .om-oss-title p {
+.container .container-main .om-oss-title p {
   text-align: left;
   padding-left: 25px;
   padding-top: 9px;
@@ -142,7 +129,7 @@
   font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
-.container-main .om-oss-wrapper {
+.container .container-main .om-oss-wrapper {
   width: 95%;
   display: flex;
   flex-direction: row;
@@ -153,18 +140,18 @@
   margin-top: 10px;
   margin-bottom: 50px;
 }
-.container-main .om-oss-wrapper .om-oss-img img {
+.container .container-main .om-oss-wrapper .om-oss-img img {
   width: 90%;
   border-radius: 200px;
 }
-.container-main .om-oss-wrapper .om-oss-text {
+.container .container-main .om-oss-wrapper .om-oss-text {
   width: 80%;
   min-width: 50%;
 }
-.container-main .om-oss-wrapper .om-oss-text p {
+.container .container-main .om-oss-wrapper .om-oss-text p {
   font-size: 1rem;
 }
-.container-main .service-title {
+.container .container-main .service-title {
   background-color: rgba(198, 122, 249, 0.203);
   width: 70%;
   border-radius: 20px;
@@ -174,7 +161,7 @@
   margin-bottom: 20px;
   font-family: "Roboto", sans-serif;
 }
-.container-main .service-title p {
+.container .container-main .service-title p {
   text-align: right;
   padding-right: 25px;
   padding-top: 9px;
@@ -182,7 +169,7 @@
   font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
-.container-main .service-wrapper {
+.container .container-main .service-wrapper {
   margin-top: 20px;
   width: 100%;
   gap: 20px;
@@ -192,7 +179,7 @@
   align-content: center;
   align-items: center;
 }
-.container-main .service-wrapper .service-items {
+.container .container-main .service-wrapper .service-items {
   width: 40%;
   height: 150px;
   border-radius: 10px;
@@ -203,22 +190,21 @@
   gap: 8px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-.container-main .service-wrapper .service-items:hover {
+.container .container-main .service-wrapper .service-items:hover {
   background-color: rgba(245, 219, 115, 0.395);
 }
-.container-main .service-wrapper .service-items .service-text {
+.container .container-main .service-wrapper .service-items .service-text {
   text-align: center;
 }
-.container-main .service-wrapper .service-items img {
+.container .container-main .service-wrapper .service-items img {
   height: 60%;
 }
-
-footer {
+.container footer {
   background-color: darkgray;
   margin-top: 20px;
   height: 300px;
 }
-footer .footer-wrapper {
+.container footer .footer-wrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -227,29 +213,29 @@ footer .footer-wrapper {
   padding: 10px;
   padding-left: 40px;
 }
-footer .footer-wrapper .logo-footer img {
+.container footer .footer-wrapper .logo-footer img {
   max-width: 100px;
 }
-footer .footer-wrapper .undersidan-footer {
+.container footer .footer-wrapper .undersidan-footer {
   margin-top: 5px;
 }
-footer .footer-wrapper .undersidan-footer ul {
+.container footer .footer-wrapper .undersidan-footer ul {
   list-style: none;
 }
-footer .footer-wrapper .undersidan-footer ul li {
+.container footer .footer-wrapper .undersidan-footer ul li {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   gap: 6px;
 }
-footer .footer-wrapper .undersidan-footer ul a {
+.container footer .footer-wrapper .undersidan-footer ul a {
   text-decoration: none;
   font-family: inherit;
   color: #000000;
   font-size: 0.9rem;
   font-family: "Roboto", sans-serif;
 }
-footer .text-footer {
+.container footer .text-footer {
   margin-top: 100px;
   text-align: center;
   margin: auto;
@@ -258,20 +244,20 @@ footer .text-footer {
 }
 
 @media only screen and (min-width: 560px) {
-  .nav {
-    background-color: red;
-  }
   .nav__toggle {
     display: none;
   }
   .nav__menu {
-    flex-direction: column;
+    flex-direction: row;
   }
-  .nav__menu .nav__menu {
-    background-color: blue;
+  .nav li {
+    display: block;
+    background-color: #590707;
+  }
+  .nav li:nth-child(1) {
     display: block;
   }
-  .nav__menu .nav__menu li a {
+  .nav li:nth-child(2), .nav li:nth-child(3) {
     display: block;
   }
 }/*# sourceMappingURL=style.css.map */
