--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   /* CSS */
 }
 .container .header .header-nav {
+  width: 100%;
   background-color: rgba(211, 211, 211, 0.288);
   display: flex;
   flex-direction: row;
