--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,7 @@ body{
    
    
    .header-nav{
+    width: 100%;
     background-color: rgba(211, 211, 211, 0.288);
     display: flex;
     flex-direction: row;
