--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   width: 100%;
   background-color: rgba(211, 211, 211, 0.288);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   height: 70px;
 }
@@ -37,7 +37,7 @@ body {
   margin: auto;
 }
 .container .header .header-nav .logo img {
-  width: 90px;
+  width: 80px;
 }
 .container .header .header-nav .nav-menu {
   display: flex;
@@ -46,10 +46,9 @@ body {
   text-align: center;
   margin: auto;
   list-style: none;
-  gap: 15px;
+  gap: 5px;
 }
 .container .header .header-nav .nav-menu li {
-  width: 80px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.1);
   padding: 10px;
   border-radius: 10px;
