--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ body{
     width: 100%;
     background-color: rgba(211, 211, 211, 0.288);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     height: 70px;
     
@@ -47,7 +47,8 @@ body{
     
     
     img{
-      width:90px;
+      width:80px;
+      
     }
   }
     .nav-menu{
@@ -58,11 +59,11 @@ body{
       margin: auto;
     
       list-style: none;
-      gap: 15px;
+      gap: 5px;
       
 
       li{
-        width: 80px;
+        
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
         padding: 10px;
         border-radius: 10px;
