--- a/style.css
+++ b/style.css
@@ -23,42 +23,68 @@ body {
   background-size: cover;
   background-position: 30%;
   height: 100vh;
+  width: 100%;
+  /* START NAVIGATION */
+  /* END NAVIGATION */
   /* CSS */
 }
-.container .header .header-nav {
-  width: 100%;
-  background-color: rgba(211, 211, 211, 0.288);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 70px;
+.container .header .content {
+  padding: 0 20px;
+  background-color: rgba(128, 128, 128, 0.34);
 }
-.container .header .header-nav .logo {
-  margin: auto;
-}
-.container .header .header-nav .logo img {
-  width: 80px;
-}
-.container .header .header-nav .nav-menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  text-align: center;
-  margin: auto;
-  list-style: none;
-  gap: 5px;
-}
-.container .header .header-nav .nav-menu li {
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  border-radius: 10px;
-}
-.container .header .header-nav .nav-menu li:hover {
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
-}
-.container .header .header-nav .nav-menu li a {
-  color: #fff;
+.container .header .content .logo {
+  color: #5FC0DC;
+  text-transform: uppercase;
   text-decoration: none;
+  font-size: 36px;
+  font-weight: bold;
+}
+.container .header .content .toggler {
+  cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 50px;
+}
+.container .header .content .toggler button {
+  background-color: transparent;
+  border: none;
+}
+.container .header nav {
+  width: 100%;
+  display: none;
+}
+.container .header nav ul {
+  list-style: none;
+}
+.container .header nav ul li a {
+  text-decoration: none;
+  color: #F2F2F2;
+  font-size: 18px;
+  line-height: 40px;
+  transition: 0.3s ease-out;
+}
+.container .header nav ul li a:hover {
+  color: #3eb7d8;
+}
+.container .header .active {
+  color: #5FC0DC;
+}
+.container .header section {
+  margin-top: 500px;
+  text-align: center;
+  font-size: 10px;
+  color: #2F2F2F;
+  margin-bottom: 20px;
+}
+.container .header section:after {
+  content: "Jan/2018";
+  font-size: 12px;
+  font-weight: bold;
+}
+.container .header #info {
+  padding-top: 200px;
+  text-align: center;
+  color: #5FC0DC;
 }
 .container .header h1 {
   color: #fff;
@@ -243,21 +269,28 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-@media only screen and (min-width: 560px) {
-  .nav__toggle {
+@media screen and (min-width: 872px) {
+  .content {
+    padding: 0 50px;
+  }
+  .toggler {
     display: none;
   }
-  .nav__menu {
-    flex-direction: row;
+  nav {
+    display: inline-block !important; /* prevent the nav to hide when resize */
+    position: relative;
+    width: auto;
+    float: right;
+    padding: 5px 0;
   }
-  .nav li {
-    display: block;
-    background-color: #590707;
+  nav ul {
+    float: left;
   }
-  .nav li:nth-child(1) {
-    display: block;
+  nav ul li {
+    display: inline-block;
+    padding-right: 20px;
   }
-  .nav li:nth-child(2), .nav li:nth-child(3) {
-    display: block;
+  .side-nav {
+    float: right;
   }
 }/*# sourceMappingURL=style.css.map */
