--- a/style.scss
+++ b/style.scss
@@ -12,8 +12,6 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 16px;
-    
-    
 }
 body{
   font-family: 'Barlow', sans-serif;
@@ -21,8 +19,7 @@ body{
 .container{
   width: 100%;
   margin: 0px auto;
-  overflow: hidden;
-
+  
 
 .header{
   overflow: hidden;
@@ -34,87 +31,73 @@ body{
    width: 100%;
    
    .content {
-    padding: 0 20px;
-    background-color: rgba(128, 128, 128, 0.34);
-
+    padding: 10px 20px;
+    background-color: rgba(255, 255, 255, 0.34);
+    display: flex;
+    justify-content:space-between;
     .logo {
-      color: #5FC0DC;
-      text-transform: uppercase;
-      text-decoration: none;
-      font-size: 36px;
-      font-weight: bold;
+     
+     margin-top: 10px;
+
+     &:hover{
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      border-radius: 10px;
+     }
     }
     .toggler {
-      
-     button{
-      background-color: transparent;
-      border: none;
-      
-     }
       cursor: pointer;
       position: absolute;
       top: 8px;
       right: 50px;
+      
+     button{
+      background-color: transparent;
+      border: none;
+
+      &:hover{
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        border-radius: 10px;
+       }
+     }
     }
   }
 
    
-  
-  
   /* START NAVIGATION */
   nav {
     width: 100%;
     display: none;
-  }
-  
-  nav ul {
-    list-style: none;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #F2F2F2;
-    font-size: 18px;
-    line-height: 40px;
-    transition: 0.3s ease-out;
-  }
-  
-  nav ul li a:hover {
-    color: #3eb7d8;
-  }
-  
-  .active {
-    color: #5FC0DC;
-  }
-  
-  
-  
- 
-  /* END NAVIGATION */
-  section {
-    margin-top: 500px;
-    text-align: center;
-    font-size: 10px;
-    color: #2F2F2F;
-    margin-bottom: 20px;
-  }
-  
-  section:after {
-    content: 'Jan/2018';
-    font-size: 12px;
-    font-weight: bold;
-  }
-  
-  #info {
-    padding-top: 200px;
-    text-align: center;
-    color: #5FC0DC;
-  }
 
- 
+    ul {
+      list-style: none;
+    }
+    li {
+      .active {
+        color: #5FC0DC;
+        text-align: center;
+      }
     
+    a {
+      margin-left: 0px;
+      text-decoration: none;
+      color: #000000;
+      font-size: 18px;
+      line-height: 40px;
+      transition: 0.3s ease-out;
+      
+    }
+
+    &:hover{
+      :hover {
+        color: #3eb7d8;
+      }
+    }
+  }
+  }
+  /* END NAVIGATION */
   
   
+ 
     h1{
       color: #fff;
       position: absolute;
@@ -168,121 +151,74 @@ body{
   text-align: center;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border: 1px solid #fff;
-  
-
 }
 .button-1:hover{
   background-color: rgba(162, 0, 255, 0.484);
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
 }
 
-
-
- 
   
 }
 
 .container-main{
-  margin-top: 30px;
- 
-  .om-oss-title{
-   background-color: rgba(0, 255, 255, 0.203);
-   width: 70%;
-   border-radius: 20px;
-   position: relative;
-   left: 200px;
-   height:50px;
-   margin-bottom: 20px;
-   
-    p{
-    
-      text-align: left;
-      padding-left: 25px;
-      padding-top: 9px;
-      font-size: 1.5rem;
-      font-weight: 300;
-      font-family: 'Roboto', sans-serif;
-      
   
-    }
-    
-  }
+ 
+  text-align: center; 
+  align-items: center;
+ 
+
   .om-oss-wrapper{
-    
-    width: 95%;
+    height: 100vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    
+    flex-direction: column;
     align-content: center;
-    align-items: center;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 50px;
+    justify-content: center;
+    gap:10px;
+    background-color: lightblue;
    
+
+    .om-oss-title{
+    font-family: 'Roboto', sans-serif;
+    color: rgb(23, 19, 19);
+    background-color: lightgray;
     
+    }
+
     .om-oss-img{
       img{
-        width:90%;
-        border-radius: 200px;
-        
+        width:60%;
+        border-radius: 100px;
+       border: 1px solid black;
       }
     }
     .om-oss-text{
-      
-      width: 80%;
-      min-width: 50%;
-
+     width: 50%;
+     background-color: gray;
+     margin: 0 auto;
       p{
         font-size: 1rem;
       }
-
     }
   }
 
-  .service-title{
-   background-color: rgba(198, 122, 249, 0.203);
-   width: 70%;
-   border-radius: 20px;
-   position: relative;
-   right: 100px;
-   height:50px;
-   margin-bottom: 20px;
-   font-family: 'Roboto', sans-serif;
-    p{
-      text-align: right;
-      padding-right: 25px;
-      padding-top: 9px;
-      font-size: 1.5rem;
-      font-weight: 300;
-      font-family: 'Roboto', sans-serif;
-    }
-  }
-  
-
-    
-
-    .service-wrapper{
-
+    .service-wrapper{      
        margin-top: 20px;
         width: 100%;
-        gap:20px;
+        gap:40px;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-content: center;
         align-items: center;
        
-        
         .service-items{
-            width:40%;
-            height: 150px;
+            width:200px;
+            height: 200px;
+            padding: 20px;
             border-radius: 10px;
-            background-color: rgba(194, 194, 194, 0.142);
-            margin: 0 20px;
             display: flex;
             flex-direction: column;
-            gap: 8px;
+           
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
            
             &:hover {
@@ -292,18 +228,14 @@ body{
 
             .service-text{
               text-align: center;
-              
-
-             
+              padding: 5px;
             }
             img{
-              height:60%;
-
+              height:50%;
+              margin:20px 20px;
             }
         }
         }
-
-        
         }
 
 footer{
@@ -389,34 +321,41 @@ footer{
 
 //Media
 
-@media screen and (min-width: 872px) {
+@media screen and (min-width: 556px) {
   
   .content {
-    padding: 0 50px;
+    .toggler {
+      display: none;
+    }
+    nav { 
+      display: inline-block !important; /* prevent the nav to hide when resize */
+      position: relative;
+      max-width:70%;
+      margin-left: 30px;
+      ul{
+        display: flex;
+        justify-content: space-around;
+        li{
+          display: inline-block;
+          text-align: center;
+          padding:auto;
+          width:150px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          border-radius: 15px;
+          a{
+            text-align: center;
+            padding: auto;
+            margin: auto;
+          }
+        }
+      }
+    }
   }
   
-  .toggler {
-    display: none;
-  }
   
-  nav {
-    display: inline-block !important; /* prevent the nav to hide when resize */
-    position: relative;
-    width: auto;
-    float: right;
-    padding: 5px 0;
-  }
- 
-  nav ul {
-    float: left;
-  }
   
-  nav ul li {
-    display: inline-block;
-    padding-right: 20px;
-  }
   
-  .side-nav {
-   float: right;
-  }
+
+  
+  
 }
