--- a/style.scss
+++ b/style.scss
@@ -226,36 +226,37 @@ body{
            }
         }
        .service-long-text{
-        background-color: lightgray;
+        
+
+        .service-text{
+          text-align: center;
+          font-size: 1.3rem;
+          font-weight: 200px;
+          
+          
+        }
        }
         .service-items{
           background-color: #fff;
             width:90%;
-            height: 50vh;
-           
-          
+            height: 60vh;
             border-radius: 20px;
             display: flex;
             flex-direction: column;
+            
            
            
            
             &:hover {
-              background-color:rgba(245, 219, 115, 0.395);
+              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
           }
           
 
-            .service-text{
-              text-align: center;
-              
-             
-              
-            }
+           
             img{
-              width: 40%;
+              width: 20%;
               margin:auto;
-              margin-top:20px;
-              margin-bottom: 2px;
+              
             }
         }
         }
