--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -62,7 +63,7 @@ body {
   list-style: none;
 }
 .container .header nav li .active {
-  color: #5FC0DC;
+  color: #353636;
   text-align: center;
 }
 .container .header nav li a {
@@ -115,7 +116,7 @@ body {
   line-height: 20px;
   outline: none;
   padding: 10px 16px;
-  margin-top: 350px;
+  margin-top: 300px;
   margin-left: 25px;
   text-align: center;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -139,10 +140,10 @@ body {
 }
 .container .container-main .om-oss-wrapper .om-oss-title {
   text-align: center;
+  font-family: "Roboto Slab", serif;
 }
 .container .container-main .om-oss-wrapper .om-oss-title p {
   color: rgb(23, 19, 19);
-  font-family: "Barlow", sans-serif;
   font-size: 1.4rem;
   text-align: center;
   padding: 6px;
@@ -156,7 +157,9 @@ body {
   margin: 0 auto;
 }
 .container .container-main .om-oss-wrapper .om-oss-text p {
-  font-size: 1.2rem;
+  font-size: 0.9rem;
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
 }
 .container .container-main .service-wrapper {
   background-color: rgba(173, 229, 230, 0.258);
@@ -169,41 +172,53 @@ body {
   gap: 5px;
 }
 .container .container-main .service-wrapper .service-title p {
+  border: 1px solid black;
   color: rgb(23, 19, 19);
-  font-family: "Barlow", sans-serif;
-  font-size: 1rem;
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 .container .container-main .service-wrapper .service-item-wrapper {
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 300px;
+  height: 400px;
   width: 100%;
 }
 .container .container-main .service-wrapper .service-item-wrapper .service-item {
+  border: 1px solid rgb(193, 9, 9);
   background-color: #fff;
-  height: 70%;
-  width: 60%;
+  height: 80%;
+  width: 90%;
   border-radius: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
+  margin: auto;
 }
 .container .container-main .service-wrapper .service-item-wrapper .service-item img {
-  width: 15%;
+  width: 25%;
 }
 .container .container-main .service-wrapper .service-item-wrapper .service-item:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .container .container-main .service-wrapper .service-text {
-  width: 60%;
+  width: 90%;
+  font-family: sans-serif;
+  margin-top: 20px;
+  text-align: left;
 }
 .container .container-main .service-wrapper .service-text .service-text-title {
   text-align: center;
-  font-size: 1.2rem;
-  font-weight: 200px;
+  font-size: 1.4rem;
+  font-weight: 400px;
+  font-family: sans-serif;
+  margin-bottom: 10px;
 }
 .container footer {
   background-color: darkgray;
